RESOLVED FIXED117284
REGRESSION (r148367): Facebook and Twitter icons at macworld.com are stacked vertically, obscuring Twitter one
https://bugs.webkit.org/show_bug.cgi?id=117284
Summary REGRESSION (r148367): Facebook and Twitter icons at macworld.com are stacked ...
andreasvenetis
Reported 2013-06-05 23:47:16 PDT
There is a bad alignment of the symbols facebook and tweeter on top. FINALY AFTER MONTHS you made scrolling smooth on YAHOO page. THANKS !!! Great programming.
Attachments
Reduction (255 bytes, text/html)
2013-06-08 06:22 PDT, Robert Hogan
no flags
Truer Reduction (286 bytes, text/html)
2013-06-08 06:52 PDT, Robert Hogan
no flags
Patch (4.61 KB, patch)
2013-06-09 02:55 PDT, Robert Hogan
no flags
Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 (651.45 KB, application/zip)
2013-06-09 03:45 PDT, Build Bot
no flags
Archive of layout-test-results from webkit-ews-03 for mac-mountainlion (800.88 KB, application/zip)
2013-06-09 05:30 PDT, Build Bot
no flags
Patch (4.65 KB, patch)
2013-06-14 12:05 PDT, Robert Hogan
no flags
Alexey Proskuryakov
Comment 1 2013-06-07 17:45:51 PDT
Alexey Proskuryakov
Comment 2 2013-06-07 18:04:40 PDT
Robert Hogan
Comment 3 2013-06-08 06:22:13 PDT
Created attachment 204089 [details] Reduction
Robert Hogan
Comment 4 2013-06-08 06:52:18 PDT
Created attachment 204090 [details] Truer Reduction The other one is a different bug.
Robert Hogan
Comment 5 2013-06-09 02:55:18 PDT
Build Bot
Comment 6 2013-06-09 03:45:12 PDT
Comment on attachment 204113 [details] Patch Attachment 204113 [details] did not pass mac-wk2-ews (mac-wk2): Output: http://webkit-queues.appspot.com/results/764219 New failing tests: fast/text/whitespace/inline-whitespace-wrapping-7.html fast/text/whitespace/inline-whitespace-wrapping-5.html fast/text/whitespace/inline-whitespace-wrapping-6.html
Build Bot
Comment 7 2013-06-09 03:45:14 PDT
Created attachment 204115 [details] Archive of layout-test-results from webkit-ews-12 for mac-mountainlion-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: webkit-ews-12 Port: mac-mountainlion-wk2 Platform: Mac OS X 10.8.3
Build Bot
Comment 8 2013-06-09 05:30:46 PDT
Comment on attachment 204113 [details] Patch Attachment 204113 [details] did not pass mac-ews (mac): Output: http://webkit-queues.appspot.com/results/682446 New failing tests: fast/text/whitespace/inline-whitespace-wrapping-7.html fast/text/whitespace/inline-whitespace-wrapping-5.html fast/text/whitespace/inline-whitespace-wrapping-6.html
Build Bot
Comment 9 2013-06-09 05:30:48 PDT
Created attachment 204117 [details] Archive of layout-test-results from webkit-ews-03 for mac-mountainlion The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: webkit-ews-03 Port: mac-mountainlion Platform: Mac OS X 10.8.3
Alexey Proskuryakov
Comment 10 2013-06-10 09:28:06 PDT
*** Bug 117393 has been marked as a duplicate of this bug. ***
Daniel Bates
Comment 11 2013-06-13 16:10:09 PDT
Comment on attachment 204113 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=204113&action=review > LayoutTests/fast/text/whitespace/inline-whitespace-wrapping-7-expected.html:10 > +<p> webkit.org/b/117284: Don't detect line breaks in trailing collapsing space inside nowrap inlines.</p> This text doesn't match the text in the test case, , LayoutTests/fast/text/whitespace/inline-whitespace-wrapping-7.html. This difference causes the test to fail as seen in the layout test results archives, say attachment 204117 [details]. > LayoutTests/fast/text/whitespace/inline-whitespace-wrapping-7-expected.html:14 > + <a href="">B</a></div> > +</div> Did you intend to have two </div>s? I mean, you didn't have such </div>s in the test case?
Robert Hogan
Comment 12 2013-06-14 12:05:47 PDT
Dave Hyatt
Comment 13 2013-06-14 14:06:26 PDT
Comment on attachment 204727 [details] Patch r=me
WebKit Commit Bot
Comment 14 2013-06-14 23:59:41 PDT
Comment on attachment 204727 [details] Patch Clearing flags on attachment: 204727 Committed r151613: <http://trac.webkit.org/changeset/151613>
WebKit Commit Bot
Comment 15 2013-06-14 23:59:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.